# cc-dump

./: .continue-here.md  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  BLOCK_RENDERING_AUDIT.md  BLOCK_RENDER_FORMAT_REFERENCE.md  CLAUDE.md  COMPLEXITY_AUDIT.md  HOT_RELOAD_ARCHITECTURE.md  PROJECT_SPEC.md  README.md  REFACTOR_SUMMARY.md  ROADMAP.md  STATE_MANAGEMENT_ROADMAP.md  TEXTUAL_WEB.md  depBuildScripts.py  justfile  plan-comprehensive-hide-show.md  pyproject.toml
.agent_planning/: 01-COMPLEXITY-INVENTORY.md  AI-WORKBENCH-FEATURE-REMOVAL-SPEC-2026-03-07.md  COMPLEXITY-AUDIT-2026-03-06-SORTED-HIGH-MEDIUM.md  COMPLEXITY-AUDIT-2026-03-06.md  HANDOFF-non-streaming-pipeline-20260219.md  HANDOFF-remove-level-enum-20260211_020543.md  HANDOFF-tmux-mouse-coordination-20260214.md  PERFORMANCE-EVALUATION-2026-02-03.md
.agent_planning/arch-simplification/: EVALUATION-20260206.md  EXPLORE-20260206.md  SPRINT-20260206-dead-code-cleanup-CONTEXT.md  SPRINT-20260206-dead-code-cleanup-DOD.md  SPRINT-20260206-dead-code-cleanup-PLAN.md  SPRINT-20260206-filter-registry-CONTEXT.md  SPRINT-20260206-filter-registry-DOD.md  SPRINT-20260206-filter-registry-PLAN.md  SPRINT-20260206-state-on-data-CONTEXT.md  SPRINT-20260206-state-on-data-DOD.md  SPRINT-20260206-state-on-data-PLAN.md
.agent_planning/complexity-reduction/: EVALUATION-2026-02-06-050000.md  EXPLORE-2026-02-06-050000.md  SPRINT-2026-02-06-tool-summarization-CONTEXT.md  SPRINT-2026-02-06-tool-summarization-DOD.md  SPRINT-2026-02-06-tool-summarization-PLAN.md  USER-RESPONSE-2026-02-06.md
.agent_planning/conversation-display/: EVALUATION-20260129.md  EVALUATION-20260201.md  SPRINT-20260129-120000-widget-arch-CONTEXT.md  SPRINT-20260129-120000-widget-arch-DOD.md  SPRINT-20260129-120000-widget-arch-PLAN.md  SPRINT-20260129-130000-scroll-nav-CONTEXT.md  SPRINT-20260129-130000-scroll-nav-DOD.md  SPRINT-20260129-130000-scroll-nav-PLAN.md  SPRINT-20260130-160000-inline-streaming-DOD.md  SPRINT-20260201-120000-xml-tag-parsing-CONTEXT.md  SPRINT-20260201-120000-xml-tag-parsing-DOD.md  SPRINT-20260201-120000-xml-tag-parsing-PLAN.md
.agent_planning/debug-panel/: SPRINT-2026-0227-debug-panel-PLAN.md
.agent_planning/filter-performance-phase1/: COMPLETION-20260203.md  EVALUATION-20260203-033729.md  EVALUATION-20260203-034500.md  EXPLORE-20260203-033729.md  EXPLORE-20260203-034500.md  IMPLEMENTATION-COMPLETE-20260203.md  SPRINT-20260203-033800-filter-perf-phase1-CONTEXT.md  SPRINT-20260203-033800-filter-perf-phase1-DOD.md  SPRINT-20260203-033800-filter-perf-phase1-PLAN.md  USER-RESPONSE-20260203-034100.md  WORK-EVALUATION-20260203.md
.agent_planning/har-recording/: EVALUATION-20260203-120000.md  SPRINT-20260203-120000-event-recording-CONTEXT.md  SPRINT-20260203-120000-event-recording-DOD.md  SPRINT-20260203-120000-event-recording-PLAN.md  SPRINT-20260203-130000-event-replay-CONTEXT.md  SPRINT-20260203-130000-event-replay-DOD.md  SPRINT-20260203-130000-event-replay-PLAN.md  SPRINT-20260203-140000-pipeline-unification-CONTEXT.md  SPRINT-20260203-140000-pipeline-unification-DOD.md  SPRINT-20260203-140000-pipeline-unification-PLAN.md  STATUS-20260203-052900.md
.agent_planning/hot-reload-api/: SPRINT-2026-01-24-auto-registration-DOD.md  SPRINT-2026-01-24-protocol-definition-DOD.md  SPRINT-2026-01-24-verification-DOD.md
.agent_planning/hot-reload-tui/: SPRINT-2026-01-24-tui-hot-reload-DOD.md  SPRINT-2026-01-24-tui-hot-reload-PLAN.md  USER-RESPONSE-2026-01-24.md
.agent_planning/message-collapse-filters/: EVALUATION-20260203-180000.md  SPRINT-20260203-180000-message-collapse-CONTEXT.md  (+2 more)
.beads/: issues.jsonl  metadata.json
.github/: copilot-instructions.md  create-snarfx-stub.py
.quality_gate/: complexity_baseline.json  lint_baseline.json
benchmarks/: bench_side_channel_latency.py  bench_streaming.py
dev-docs/: .gitignore  INDEX.md  generate_granular_docs.py  generate_textual_docs.py  manifest.json
docs/: ARCHITECTURE.md  COMPLEXITY_AUDIT_2026-03-10.md  HIERARCHY_EXAMPLE.md  HOT_RELOAD_ARCHITECTURE.md  PRODUCT_DECISIONS.md  PROJECT_SPEC.md  QUICK_REFERENCE.md  SIDE_CHANNEL_IDEAS.md  THEME_COLOR_SYSTEM.md  THEME_VARIABLE_COMPARISON.md  THEME_VARIABLE_REFERENCE.md  VISIBILITY_SYSTEM.md  d6u_smoke_checks.md  multi-session-architecture.md  proxy-plugin-api.md  subagent_enrichment.md
prompts/: CREATE-SPEC.md
reference/: SNARFX.md
scripts/: quality_gate.py
scripts-tmp/: checkpoint_diff.py  context_pruner.py  har_checkpoint_diff.py  session_insights.py
spec/: INDEX.md  analytics.md  cli.md  errors.md  events.md  export.md  filters.md  formatting.md  hot-reload.md  navigation.md  panels.md  proxy.md  recording.md  rendering.md  search.md  sessions.md  themes.md  visibility.md
src/cc_dump/: analysis.py  (+51 more)
tests/: README.md  conftest.py  test_0_no_function_level_cc_dump_imports.py  test_action_items.py  test_action_items_beads.py  test_analysis.py  test_analytics_dashboard_rendering.py  test_analytics_store.py  test_block_click_toggle.py  test_checkpoints.py  test_chip.py  test_cli_run.py  test_coerce.py  test_context_pruner.py  test_conversation_qa.py  test_conversation_search_seams.py  test_copilot_auth.py  test_copilot_provider.py  test_copilot_proxy_routes.py  test_copilot_rate_limit.py  test_copilot_token_manager.py  test_copilot_translate.py  test_copilot_translation.py  test_custom_footer_state.py  test_cycle_selector.py  test_d6u_smoke_checks.py  test_debug_settings_panel.py  test_decision_ledger.py  test_domain_store.py  test_dump_command.py  test_e2e_record_replay.py  test_event_handlers.py  test_event_types.py  test_exception_handling.py  test_filter_status_bar.py  test_footer_rendering.py  test_formatting.py  test_forward_proxy_tls.py  test_gutter_rendering.py  test_handoff_notes.py  (+87 more)
(+269 files in other folders)
