[project]
name = "cc-dump"
version = "0.1.0"
description = "Transparent proxy for watching Claude Code API traffic"
requires-python = ">=3.10"
dependencies = ["textual>=0.80.0"]

[project.scripts]
cc-dump = "cc_dump.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_dump"]

[dependency-groups]
dev = [
    "ptydriver>=0.2.0",
    "pytest>=9.0.2",
    "requests>=2.31.0",
]
