[project]
name = "cc-dump"
version = "0.2.0"
description = "Transparent HTTP proxy for monitoring Claude Code API traffic with TUI"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Brandon Fryslie", email = "brandon@fryslie.com"}]
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
    "textual-serve>=1.0.0",
    "tiktoken>=0.5.0",
]
keywords = ["claude", "anthropic", "proxy", "api", "debugging", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/brandon-fryslie/cc-dump"
Repository = "https://github.com/brandon-fryslie/cc-dump"
Issues = "https://github.com/brandon-fryslie/cc-dump/issues"

[project.scripts]
cc-dump = "cc_dump.cli:main"
cc-dump-serve = "cc_dump.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_dump"]

[dependency-groups]
dev = [
    "ptydriver>=0.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "pty: tests requiring PTY subprocess (slow)",
    "textual: in-process Textual harness tests (fast)",
]

[tool.mypy]
# Minimal config — passes today, tighten incrementally.
# To see what's disabled: uvx mypy src/cc_dump/ --no-error-summary
ignore_missing_imports = true
disable_error_code = [
    "arg-type",       # 32 errors — loose tuple/list element types in har_replayer, formatting
    "dict-item",      # 25 errors — rendering dispatch table signature mismatches
    "union-attr",     # 12 errors — accessing attrs on Optional without narrowing
    "var-annotated",  #  8 errors — untyped empty containers (list = [], dict = {})
    "attr-defined",   #  6 errors — dynamic attrs (_expandable, _pending_filter_snapshot)
    "index",          #  5 errors — indexing Collection[str] in har_replayer
    "assignment",     #  5 errors — incompatible assignment (None → datetime, tuple widths)
    "has-type",       #  2 errors — variable used before type can be determined
    "return-value",   #  1 error  — har_replayer return type mismatch
    "no-redef",       #  1 error  — variable redefinition
    "operator",       #  1 error  — int - None in rendering.py truncation logic
]
