[project]
name = "cc-dump"
version = "0.2.0"
description = "Transparent HTTP proxy for monitoring Claude Code API traffic with TUI"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Brandon Fryslie", email = "brandon@fryslie.com"}]
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
    "textual-serve>=1.0.0",
    "tiktoken>=0.5.0",
    "libtmux>=0.30.0",
    "watchfiles>=1.0.0",
    "snarfx",
]
keywords = ["claude", "anthropic", "proxy", "api", "debugging", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/brandon-fryslie/cc-dump"
Repository = "https://github.com/brandon-fryslie/cc-dump"
Issues = "https://github.com/brandon-fryslie/cc-dump/issues"

[project.scripts]
cc-dump = "cc_dump.cli:main"
cc-dump-serve = "cc_dump.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_dump"]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "ptydriver>=0.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.5.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "pty: tests requiring PTY subprocess (slow)",
    "textual: in-process Textual harness tests (fast)",
]
filterwarnings = [
    "ignore:.*use of forkpty\\(\\).*:DeprecationWarning",
]

[tool.mypy]
# Run: uv run mypy src
mypy_path = "stubs"
check_untyped_defs = true
disallow_any_explicit = true
disable_error_code = [
    "dict-item",      # 27 errors — rendering dispatch table signature mismatches
    "arg-type",       # 26 errors — list variance, tuple element types
    "union-attr",     # 23 errors — accessing attrs on Optional without narrowing
    "attr-defined",   # 18 errors — dynamic attrs (_expandable, _xml_strip_ranges, etc.)
    "assignment",     #  8 errors — None → datetime, implicit Optional defaults
]

[tool.uv.workspace]
members = [
    "snarfx",
]

[tool.uv.sources]
snarfx = { workspace = true, editable = true }
